# Particle_Life

./: CMakeLists.txt  README.md
dependencies/unix/SDL3/include/SDL3/: SDL_revision.h
dependencies/unix/SDL3/lib/pkgconfig/: sdl3.pc
dependencies/win32/SDL3/include/SDL3/: SDL.h  SDL_audio.h  SDL_hidapi.h  SDL_hints.h  SDL_pen.h  SDL_rect.h  SDL_revision.h  SDL_storage.h  SDL_test.h  SDL_test_assert.h  SDL_test_common.h  SDL_test_compare.h  SDL_test_crc32.h  SDL_test_font.h  SDL_test_fuzzer.h  SDL_test_harness.h  SDL_test_log.h  SDL_test_md5.h  SDL_test_memory.h  SDL_version.h
dependencies/win32/SDL3/lib/pkgconfig/: sdl3.pc
dependencies/win32/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
dependencies/win32/imgui/backends/: imgui_impl_dx9.cpp  imgui_impl_glfw.cpp  imgui_impl_metal.mm  imgui_impl_opengl3.cpp  imgui_impl_sdlgpu3.cpp  imgui_impl_sdlrenderer2.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_wgpu.cpp  imgui_impl_wgpu.h
dependencies/win32/imgui/docs/: CHANGELOG.txt  FAQ.md  FONTS.md  README.md
dependencies/win32/imgui/examples/example_glfw_wgpu/: CMakeLists.txt  Makefile.emscripten  README.md  main.cpp
dependencies/win32/imgui/examples/example_sdl2_wgpu/: CMakeLists.txt  Makefile.emscripten  README.md  main.cpp
src/: Camera.cpp  Camera.h  GUI.cpp  GUI.h  Global.h  Particle.cpp  Particle.h  Physics.cpp  Physics.h  Properties.cpp  Properties.h  RNG.cpp  RNG.h  Renderer.cpp  Renderer.h  Sim.h  Structures.h  Window.cpp  Window.h  main.cpp  sim.cpp
(+15 files in other folders)
